# serial-rs

./: .gitignore  AGENTS.md  Cargo.toml  PLAN-remote-serial.md  PLAN.md  PROGRESS-remote-serial.md  PROGRESS.md  README.md  TASKS-ssh.md
.github/workflows/: release.yml
frontend/: app.js  index.html  style.css
homebrew/Casks/: serial-terminal.rb
scripts/: bump-version.sh
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ssh.rs  zmodem.rs
