[package]
name = "serial-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "serial_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
serialport = "4"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
